--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
     "name": "@hghazni/random-title",
-    "version": "1.1.0"
+    "version": "1.1.1",
+    "main": "index.js",
+    "repository": {
+    "type": "git",
+    "url": "https://github.com/hghazni/random-title.git"
+    },
+    "keywords": [],
+    "author": "Harry Ghazni",
+    "license": "MIT",
+    "bugs": {
+    "url": "https://github.com/hghazni/random-title/issues"
+    }
 }
